[package]
name = "balagan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["jpeg"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
